--- a/author-frontend/index.html
+++ b/author-frontend/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://cdn.tiny.cloud/1/fzq8ut8l4whwspu2pqzxwf84ukek80fotkywi6xvv99jpk5y/tinymce/7/tinymce.min.js"
+      referrerpolicy="origin"
+    ></script>
     <title>Vite + React</title>
   </head>
   <body>
